# omniagent

./: .gitignore  .gitmodules  .mcp.json
.github/: CODEOWNERS
.omniagent/: settings.local.json
docs/: architecture-and-remediation-review-2026-04-06.md  audit-review-and-bugfix-rubric-system-implementation-plan-2026-04-08.md  audit-review-and-bugfix-rubric-system-spec-2026-04-08.md  clarification-qa-next-session-handoff-2026-04-07.md  confctl-source-of-truth-audit-2026-04-08.md  core-integrated-project-engine-loop-implementation-plan-2026-04-08.md  core-integrated-project-engine-loop-spec-2026-04-08.md  engine-consumption-and-integration-spec-2026-04-06.md  engine-integration-implementation-plan-2026-04-06.md  engine-module-audit-2026-04-06.md  existing-codebase-development-workflow-patterns-implementation-plan-2026-04-08.md  existing-codebase-development-workflow-patterns-spec-2026-04-08.md  graph-first-core-and-engine-separation-spec-2026-04-06.md  idea-to-spec-and-plan-workflow-implementation-plan-2026-04-07.md  idea-to-spec-and-plan-workflow-spec-2026-04-07.md  repl-rewind-fork-stop-implementation-plan-2026-04-07.md  repl-rewind-fork-stop-spec-2026-04-07.md  spec-and-plan-clarification-qa-implementation-plan-2026-04-07.md  spec-and-plan-clarification-qa-spec-2026-04-07.md  systematic-code-audit-workflow-spec-2026-04-09.md
omniagent-engine/: CMakeLists.txt  README.md  run_harness.sh  run_project_cli.sh  vcpkg.json
omniagent-engine/include/omni/: approval.h  engine.h  event.h  fwd.h  host.h  mcp.h  observer.h  permission.h  plugin.h  profile.h  project.h  project_session.h  provider.h  run.h  session.h  tool.h  types.h
omniagent-engine/src/: engine_impl.cpp  engine_impl.h  host_impl.cpp  project_run_impl.cpp  project_runtime_internal.h  project_session_impl.cpp  session_impl.cpp  session_impl.h
omniagent-engine/src/agents/: agent_manager.cpp  agent_manager.h  agent_tool.cpp  agent_tool.h
omniagent-engine/src/cli/: main.cpp  repl.cpp  repl.h  repl_internal.h
omniagent-engine/src/commands/: command_registry.cpp  command_registry.h
omniagent-engine/src/core/: auto_compact.cpp  auto_compact.h  message.cpp  message.h  microcompact.cpp  microcompact.h  query.cpp  query_engine.cpp  query_engine.h  slash_commands.cpp  slash_commands.h  stream_assembler.cpp  stream_assembler.h
omniagent-engine/src/mcp/: mcp_client.cpp  mcp_client.h  mcp_tool_wrapper.cpp  mcp_tool_wrapper.h
omniagent-engine/src/permissions/: permission_checker.cpp  permission_checker.h
omniagent-engine/src/plugins/: plugin_manager.cpp  plugin_manager.h
omniagent-engine/src/providers/: http_provider.cpp  http_provider.h
omniagent-engine/src/services/: cost_tracker.cpp  cost_tracker.h  hooks.cpp  hooks.h  memory_loader.cpp  memory_loader.h  run_persistence.cpp  run_persistence.h  session_persistence.cpp  session_persistence.h
omniagent-engine/src/tools/: planner_clarification.h  planner_tools.cpp  planner_tools.h  tool_executor.cpp  tool_executor.h  tool_registry.cpp  tool_registry.h  web_tools.cpp  web_tools.h  workspace_tools.cpp  workspace_tools.h
omniagent-engine/tests/: test_agent_manager.cpp  test_auto_compact.cpp  test_cli_repl.cpp  test_command_registry.cpp  test_cost_tracker.cpp  test_hooks.cpp  test_http_provider.cpp  test_mcp_client.cpp  test_memory_loader.cpp  test_microcompact.cpp  test_permission_checker.cpp  test_planner_tools.cpp  test_plugin_manager.cpp  test_project_host.cpp  test_query_engine.cpp  test_runtime_hardening.cpp  test_session_persistence.cpp  test_session_submit.cpp  test_stream_assembler.cpp  test_tool_executor.cpp  test_tool_registry.cpp  test_types.cpp  test_web_tools.cpp  test_workspace_tools.cpp
tools/: codebase_search.py  (+2 more)
(+107 files in other folders)
